// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots Composites/GroupCall Group Call Composite 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid",
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "30rem",
            "maxWidth": "55rem",
            "width": "100%",
          }
        }
      >
        
        Please fill in Connection String to run group call widget.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Composites/OneToOneCall One To One Call Composite Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        style={
          Object {
            "height": "90vh",
            "width": "90vw",
          }
        }
      >
        
        <div
          className="ms-Stack css-2"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Please enter required information below.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/IncomingCallAlerts Incoming Call Modal Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <span
        className="ms-layer"
      >
        <div
          className="ms-Fabric ms-Layer-content content-11"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onDrag={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragExit={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onSubmit={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-labelledby="Dialog2-title"
            aria-modal={true}
            onKeyDown={[Function]}
            role="alertdialog"
            style={
              Object {
                "outline": "none",
                "overflowY": undefined,
              }
            }
          >
            <div
              className="ms-Modal is-open ms-Dialog root-4"
              role="document"
            >
              <div
                className="ms-Overlay ms-Overlay--dark root-13"
              />
              <div
                className="ms-Dialog-main main-5"
                data-id="Modal3"
                onBlur={[Function]}
                onFocus={[Function]}
                onFocusCapture={[Function]}
              >
                <div
                  aria-hidden={true}
                  data-is-visible={true}
                  onFocus={[Function]}
                  style={
                    Object {
                      "pointerEvents": "none",
                      "position": "fixed",
                    }
                  }
                  tabIndex={0}
                />
                <div
                  className="ms-Modal-scrollableContent scrollableContent-6"
                  data-is-scrollable={true}
                >
                  <div
                    className="content-14"
                  >
                    <div
                      className="ms-Dialog-header header-16"
                    >
                      <div
                        aria-level={1}
                        className="ms-Dialog-title title-19"
                        id="Dialog2-title"
                        role="heading"
                      >
                        Incoming Video Call
                      </div>
                      <div
                        className="topButton-20"
                      >
                        <button
                          aria-label="Close"
                          className="ms-Button ms-Button--icon ms-Dialog-button ms-Dialog-button--close root-21"
                          data-is-focusable={true}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          title="Close"
                          type="button"
                        >
                          <span
                            className="ms-Button-flexContainer flexContainer-22"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-29 ms-Button-icon icon-24"
                              data-icon-name="Cancel"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      className="ms-Dialog-inner inner-17"
                    >
                      <div
                        className="ms-Dialog-content innerContent-18"
                      >
                        <div
                          className="ms-Stack css-30"
                        >
                          <div
                            className="ms-Stack css-31"
                            style={
                              Object {
                                "marginRight": "0.5rem",
                              }
                            }
                          >
                            <div
                              aria-label="Maximus Aurelius"
                              className="ms-Persona ms-Persona--size40 root-32"
                            >
                              <div
                                className="ms-Persona-coin ms-Persona--size40 coin-39"
                                role="presentation"
                              >
                                <div
                                  className="ms-Persona-imageArea imageArea-41"
                                  role="presentation"
                                >
                                  <div
                                    aria-hidden="true"
                                    className="ms-Persona-initials initials-44"
                                  >
                                    <span>
                                      MA
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="ms-Stack css-47"
                            style={
                              Object {
                                "alignItems": "flex-start",
                              }
                            }
                          >
                            <div
                              className="ms-Stack css-48"
                              style={
                                Object {
                                  "color": "#000000",
                                  "fontSize": "0.875rem",
                                  "fontWeight": "bold",
                                }
                              }
                            >
                              <span>
                                Maximus Aurelius
                                <span
                                  style={
                                    Object {
                                      "marginLeft": "0.2rem",
                                      "opacity": 0.5,
                                    }
                                  }
                                >
                                   • 
                                  1st
                                </span>
                              </span>
                            </div>
                            <div
                              className="ms-Stack css-48"
                              style={
                                Object {
                                  "color": "#201f1e",
                                  "fontSize": "0.75rem",
                                }
                              }
                            >
                              <span>
                                Emperor and Philosopher, Rome
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          className="ms-Stack css-115 css-48"
                        >
                          <div
                            className="ms-Stack css-51"
                          >
                            <div
                              className="ms-Stack css-52"
                            >
                              <div
                                className="css-69"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-Dialog-actions actions-53"
                      >
                        <div
                          className="ms-Dialog-actionsRight actionsRight-55"
                        >
                          <span
                            className="ms-Dialog-action action-54"
                          >
                            <button
                              className="ms-Button ms-Button--default root-56"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#faf9f8",
                                  "border": "none",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  aria-hidden="true"
                                  className="ui-icon al am an"
                                  role="img"
                                >
                                  <svg
                                    className="ao ap aq ar as"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="2 2 16 16"
                                  >
                                    <path
                                      className="ui-icon__outline at"
                                      d="M4.5 4C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H11.5C12.8807 16 14 14.8807 14 13.5V12.5L16.4 14.3C17.0592 14.7944 18 14.324 18 13.5V6.49998C18 5.67594 17.0592 5.20556 16.4 5.69998L14 7.49998V6.5C14 5.11929 12.8807 4 11.5 4H4.5ZM14 8.74998L17 6.49998V13.5L14 11.25V8.74998ZM13 6.5V13.5C13 14.3284 12.3284 15 11.5 15H4.5C3.67157 15 3 14.3284 3 13.5V6.5C3 5.67157 3.67157 5 4.5 5H11.5C12.3284 5 13 5.67157 13 6.5Z"
                                    />
                                    <g
                                      className="ui-icon__filled"
                                    >
                                      <path
                                        d="M13 6.5C13 5.11929 11.8807 4 10.5 4H4.5C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H10.5C11.8807 16 13 14.8807 13 13.5V6.5Z"
                                      />
                                      <path
                                        d="M14 7.93082V12.0815L16.7642 14.4319C17.2512 14.8461 18 14.4999 18 13.8606V6.19315C18 5.55685 17.2575 5.20962 16.7692 5.61756L14 7.93082Z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </span>
                            </button>
                          </span>
                          <span
                            className="ms-Dialog-action action-54"
                          >
                            <button
                              className="ms-Button ms-Button--default root-56"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#107c10",
                                  "border": "none",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  className="ms-Button-textContainer textContainer-23"
                                >
                                  <span
                                    className="ms-Button-label label-57"
                                    id="id__10"
                                  >
                                    Accept
                                  </span>
                                </span>
                              </span>
                            </button>
                          </span>
                          <span
                            className="ms-Dialog-action action-54"
                          >
                            <button
                              className="ms-Button ms-Button--default root-56"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#a4262c",
                                  "border": "none",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  className="ms-Button-textContainer textContainer-23"
                                >
                                  <span
                                    className="ms-Button-label label-57"
                                    id="id__13"
                                  >
                                    Decline
                                  </span>
                                </span>
                              </span>
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-is-visible={true}
                  onFocus={[Function]}
                  style={
                    Object {
                      "pointerEvents": "none",
                      "position": "fixed",
                    }
                  }
                  tabIndex={0}
                />
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/IncomingCallAlerts Incoming Call Toast Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-2"
      >
        <div
          className="ms-Stack css-111 css-3"
        >
          <div
            className="ms-Stack css-112 css-4"
          >
            <div
              aria-label="John Doe"
              className="ms-Persona ms-Persona--size40 root-5"
            >
              <div
                className="ms-Persona-coin ms-Persona--size40 coin-12"
                role="presentation"
              >
                <div
                  className="ms-Persona-imageArea imageArea-14"
                  role="presentation"
                >
                  <div
                    aria-hidden="true"
                    className="ms-Persona-initials initials-17"
                  >
                    <span>
                      JD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-20"
            style={
              Object {
                "alignItems": "flex-start",
                "fontFamily": "Segoe UI",
              }
            }
          >
            <div
              className="ms-Stack css-2"
              style={
                Object {
                  "fontSize": "0.875rem",
                }
              }
            >
              <b>
                John Doe
              </b>
            </div>
            <div
              className="ms-Stack css-2"
              style={
                Object {
                  "fontSize": "0.75rem",
                }
              }
            >
              <span>
                Incoming Call
              </span>
            </div>
          </div>
          <div
            className="ms-Stack css-21"
          >
            <button
              className="ms-Button ms-Button--default css-114 root-22"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-23"
                data-automationid="splitbuttonprimary"
              >
                <span
                  aria-hidden="true"
                  className="ui-icon al am an"
                  role="img"
                >
                  <svg
                    className="ao au av ar as"
                    focusable="false"
                    role="presentation"
                    viewBox="2 2 16 16"
                  >
                    <path
                      className="ui-icon__outline at"
                      d="M10 6.00001C13.3317 5.99572 15.5858 7.2756 17.154 8.65976C17.8139 9.2422 18.116 10.1179 17.9594 10.94L17.8015 11.7692C17.6535 12.5461 16.9272 13.0679 16.1042 12.9884L14.4666 12.8302C13.753 12.7613 13.2241 12.2401 13 11.5001C12.6957 10.4953 12.5 9.75009 12.5 9.75009C11.7522 9.44357 11.0138 9.25005 10 9.25005C8.98623 9.25005 8.26225 9.46492 7.5 9.75009C7.5 9.75009 7.29566 10.496 7 11.5001C6.80244 12.171 6.49595 12.7567 5.79708 12.8269L4.16895 12.9905C3.35656 13.0722 2.57765 12.5555 2.3467 11.7818L2.09921 10.9526C1.85286 10.1273 2.0727 9.25869 2.67633 8.67245C4.10141 7.28843 6.67315 6.00433 10 6.00001ZM13.4754 9.52689L13.5008 9.62157C13.5232 9.70474 13.5565 9.82664 13.5991 9.97972C13.6846 10.2861 13.8075 10.7163 13.9571 11.2102C14.0936 11.661 14.3462 11.8139 14.5628 11.8348L16.2004 11.993C16.5457 12.0264 16.7746 11.816 16.8191 11.5821L16.9771 10.7529C17.0653 10.2894 16.8963 9.76613 16.4923 9.40948C15.0673 8.1517 13.0404 6.9961 10.0013 7.00001C6.92594 7.00401 4.60599 8.19238 3.37303 9.38982C3.04458 9.70881 2.9145 10.1877 3.05744 10.6666L3.30493 11.4957C3.39647 11.8024 3.72575 12.03 4.06896 11.9955L5.69709 11.8319C5.73551 11.8281 5.74859 11.8203 5.7511 11.8189C5.75521 11.8165 5.77275 11.8057 5.80155 11.7692C5.8711 11.6811 5.9536 11.5135 6.04073 11.2176C6.18728 10.7199 6.31122 10.2861 6.39847 9.97694C6.44208 9.82241 6.47648 9.69914 6.49992 9.61474L6.52663 9.51827C6.62916 9.15132 6.98467 8.89552 7.14961 8.81349C7.96877 8.50703 8.81921 8.25005 10 8.25005C11.1653 8.25005 12.0327 8.47779 12.8793 8.8248C13.0313 8.88736 13.3617 9.10921 13.4672 9.4961L13.4691 9.50315L13.4754 9.52689Z"
                    />
                    <path
                      className="ui-icon__filled"
                      d="M17.9594 10.94L17.8015 11.7691C17.6535 12.546 16.9272 13.0678 16.1042 12.9883L14.4666 12.8301C13.753 12.7612 13.2241 12.24 13 11.5C12.6957 10.4952 12.5 9.75 12.5 9.75C11.7522 9.44348 11.0138 9.24996 10 9.24996C8.98623 9.24996 8.26225 9.46483 7.5 9.75C7.5 9.75 7.29566 10.4959 7 11.5C6.80244 12.1709 6.49595 12.7566 5.79708 12.8268L4.16895 12.9904C3.35656 13.0721 2.57765 12.5554 2.3467 11.7817L2.09921 10.9525C1.85286 10.1272 2.0727 9.2586 2.67633 8.67236C4.10141 7.28834 6.6656 6.50821 9.99245 6.50389C13.3241 6.4996 15.5858 7.27551 17.154 8.65967C17.8139 9.24211 18.116 10.1178 17.9594 10.94Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <button
              className="ms-Button ms-Button--default css-113 root-22"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-23"
                data-automationid="splitbuttonprimary"
              >
                <span
                  aria-hidden="true"
                  className="ui-icon al am an"
                  role="img"
                >
                  <svg
                    className="ao au av ar as"
                    focusable="false"
                    role="presentation"
                    viewBox="2 2 16 16"
                  >
                    <path
                      className="ui-icon__outline at"
                      d="M6.98608 2.06583L6.26939 2.28186C4.96586 2.67478 4.00847 3.78795 3.815 5.13559C3.51803 7.20432 4.18226 9.62236 5.78271 12.3944C7.37979 15.1606 9.13769 16.9432 11.0729 17.723C12.3425 18.2346 13.7938 17.9591 14.7877 17.0179L15.3305 16.5039C16.0579 15.8149 16.1634 14.694 15.5771 13.8815L14.2205 12.0013C13.8448 11.4807 13.1795 11.2568 12.5655 11.4445L10.5148 12.0715L10.4618 12.0819C10.2357 12.1149 9.71443 11.6259 9.06429 10.4998C8.38415 9.32175 8.24319 8.63292 8.43096 8.45535L9.47432 7.48242C10.2563 6.75326 10.4873 5.60722 10.0489 4.63206L9.38744 3.16069C8.97554 2.24445 7.9479 1.77591 6.98608 2.06583ZM8.47536 3.57071L9.13681 5.04209C9.39965 5.62676 9.26114 6.31388 8.79232 6.75107L7.74642 7.72639C7.07732 8.35912 7.29894 9.44212 8.19827 10.9998C9.04447 12.4655 9.81646 13.1898 10.646 13.0642L10.7703 13.0376L12.8579 12.4008C13.0626 12.3383 13.2843 12.4129 13.4096 12.5864L14.7662 14.4666C15.0593 14.8728 15.0066 15.4333 14.6428 15.7778L14.1001 16.2918C13.3902 16.9641 12.3535 17.1609 11.4467 16.7955C9.74859 16.1112 8.14378 14.4839 6.64873 11.8944C5.15063 9.29963 4.54433 7.09248 4.80485 5.27769C4.94304 4.31509 5.6269 3.51997 6.55799 3.23931L7.27468 3.02328C7.75559 2.87832 8.26941 3.11259 8.47536 3.57071Z"
                    />
                    <path
                      className="ui-icon__filled"
                      d="M6.98608 2.06583C7.89447 1.79202 8.86156 2.19473 9.3132 3.01218L9.38744 3.16069L10.0489 4.63206C10.4615 5.54986 10.2811 6.61902 9.60656 7.34954L9.47432 7.48242L8.43096 8.45535C8.24319 8.63292 8.38415 9.32175 9.06429 10.4998C9.67618 11.5596 10.1739 12.0552 10.4189 12.0823L10.4618 12.0819L10.5148 12.0715L12.5655 11.4445C13.1323 11.2713 13.7428 11.4487 14.1288 11.8865L14.2205 12.0013L15.5771 13.8815C16.1289 14.6462 16.068 15.6841 15.4524 16.3779L15.3305 16.5039L14.7877 17.0179C13.7938 17.9591 12.3425 18.2346 11.0729 17.723C9.13769 16.9432 7.37979 15.1606 5.78271 12.3944C4.18226 9.62236 3.51803 7.20432 3.815 5.13559C3.99879 3.85533 4.87203 2.78668 6.07651 2.34614L6.26939 2.28186L6.98608 2.06583Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/Themes Teams Theme Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div>
        <div
          className="css-74 root-2 body-1"
        >
          <div
            className="css-74"
            data-uses-unhanded-props={true}
          >
            <div
              className="ms-Stack css-4"
            >
              <button
                className="ms-Button ms-Button--default root-5"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-6"
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    aria-hidden="true"
                    className="ui-icon al am an"
                    role="img"
                  >
                    <svg
                      className="ao au av ar as"
                      focusable="false"
                      role="presentation"
                      viewBox="2 2 16 16"
                    >
                      <g
                        className="ui-icon__outline at"
                      >
                        <path
                          d="M2.85355 2.14652C2.65829 1.95126 2.34171 1.95126 2.14645 2.14652C1.95118 2.34179 1.95118 2.65837 2.14645 2.85363L3.50058 4.20777C2.61732 4.59341 2 5.47462 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H11.5C12.5254 16 13.4066 15.3827 13.7922 14.4994L17.1464 17.8536C17.3417 18.0489 17.6583 18.0489 17.8536 17.8536C18.0488 17.6584 18.0488 17.3418 17.8536 17.1465L2.85355 2.14652ZM12.9875 13.6947C12.892 14.4311 12.2625 15 11.5 15H4.5C3.67157 15 3 14.3284 3 13.5V6.5C3 5.73754 3.56887 5.10795 4.30533 5.01252L12.9875 13.6947Z"
                        />
                        <path
                          d="M13 10.8787L16.4692 14.3479C17.1231 14.7616 18 14.2957 18 13.5001V6.50011C18 5.67606 17.0592 5.20568 16.4 5.70011L14 7.50011V6.5C14 5.11929 12.8807 4 11.5 4H6.12134L7.12134 5H11.5C12.3284 5 13 5.67157 13 6.5V10.8787ZM14 8.75011L17 6.50011V13.5001L14 11.2501V8.75011Z"
                        />
                      </g>
                      <g
                        className="ui-icon__filled"
                      >
                        <path
                          d="M2.85355 2.14652C2.65829 1.95126 2.34171 1.95126 2.14645 2.14652C1.95118 2.34178 1.95118 2.65837 2.14645 2.85363L3.50058 4.20777C2.61732 4.59341 2 5.47461 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H10.5C11.8136 16 12.8906 14.9869 12.9922 13.6994L17.1464 17.8536C17.3417 18.0489 17.6583 18.0489 17.8536 17.8536C18.0488 17.6584 18.0488 17.3418 17.8536 17.1465L2.85355 2.14652Z"
                        />
                        <path
                          d="M16.7642 14.4319L15.3547 13.2334L14 11.8787V7.93076L16.7692 5.61749C17.2575 5.20956 18 5.55679 18 6.19309V13.8605C18 14.4999 17.2512 14.846 16.7642 14.4319Z"
                        />
                        <path
                          d="M13 10.8787L6.12134 4H10.5C11.8807 4 13 5.11929 13 6.5V10.8787Z"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
              <button
                className="ms-Button ms-Button--default root-5"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-6"
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    aria-hidden="true"
                    className="ui-icon al am an"
                    role="img"
                  >
                    <svg
                      className="ao au av ar as"
                      focusable="false"
                      role="presentation"
                      viewBox="2 2 16 16"
                    >
                      <g
                        className="ui-icon__outline at"
                      >
                        <path
                          d="M12 5V9.87866L12.8984 10.777C12.9647 10.5292 13 10.2687 13 9.99998V5C13 3.34315 11.6569 2 10 2C8.38301 2 7.06481 3.2793 7.00232 4.88098L8 5.87866V5C8 3.89543 8.89543 3 10 3C11.1046 3 12 3.89543 12 5Z"
                        />
                        <path
                          d="M7 7.70712L2.14645 2.85357C1.95118 2.65831 1.95118 2.34172 2.14645 2.14646C2.34171 1.9512 2.65829 1.9512 2.85355 2.14646L17.8536 17.1465C18.0488 17.3417 18.0488 17.6583 17.8536 17.8536C17.6583 18.0488 17.3417 18.0488 17.1464 17.8536L13.5195 14.2266C12.6858 14.9216 11.6434 15.3745 10.5 15.4776V17.5C10.5 17.7761 10.2761 18 10 18C9.72386 18 9.5 17.7761 9.5 17.5V15.4776C6.69675 15.2249 4.5 12.869 4.5 9.99998C4.5 9.72384 4.72386 9.49998 5 9.49998C5.27614 9.49998 5.5 9.72384 5.5 9.99998C5.5 12.4853 7.51472 14.5 10 14.5C11.0625 14.5 12.039 14.1318 12.8088 13.5159L11.7382 12.4454C11.2478 12.7946 10.6479 13 10 13C8.34315 13 7 11.6568 7 9.99998V7.70712ZM11.016 11.7231L8 8.70712V9.99998C8 11.1046 8.89543 12 10 12C10.3709 12 10.7182 11.899 11.016 11.7231Z"
                        />
                        <path
                          d="M14.803 12.6817L14.0614 11.9401C14.3426 11.3527 14.5 10.6947 14.5 9.99998C14.5 9.72384 14.7239 9.49998 15 9.49998C15.2761 9.49998 15.5 9.72384 15.5 9.99998C15.5 10.9737 15.247 11.8883 14.803 12.6817Z"
                        />
                      </g>
                      <g
                        className="ui-icon__filled"
                      >
                        <path
                          d="M13 10.0007C12.9999 10.2692 12.9646 10.5294 12.8984 10.777L7.00232 4.88098C7.06481 3.2793 8.38301 2 10 2C11.6569 2 13 3.34315 13 5V10.0007Z"
                        />
                        <path
                          d="M7 7.70712V9.99998C7 11.6568 8.34315 13 10 13C10.6479 13 11.2478 12.7946 11.7382 12.4454L12.8088 13.5159C12.039 14.1318 11.0625 14.5 10 14.5C7.51472 14.5 5.5 12.4853 5.5 9.99998C5.5 9.72384 5.27614 9.49998 5 9.49998C4.72386 9.49998 4.5 9.72384 4.5 9.99998C4.5 12.869 6.69675 15.2249 9.5 15.4776V17.5C9.5 17.7761 9.72386 18 10 18C10.2761 18 10.5 17.7761 10.5 17.5V15.4776C11.6434 15.3745 12.6858 14.9216 13.5195 14.2266L17.1464 17.8536C17.3417 18.0488 17.6583 18.0488 17.8536 17.8536C18.0488 17.6583 18.0488 17.3417 17.8536 17.1465L2.85355 2.14646C2.65829 1.9512 2.34171 1.9512 2.14645 2.14646C1.95118 2.34172 1.95118 2.65831 2.14645 2.85357L7 7.70712Z"
                        />
                        <path
                          d="M14.803 12.6817C15.247 11.8883 15.5 10.9737 15.5 9.99998C15.5 9.72384 15.2761 9.49998 15 9.49998C14.7239 9.49998 14.5 9.72384 14.5 9.99998C14.5 10.6947 14.3426 11.3527 14.0614 11.9401L14.803 12.6817Z"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </button>
              <button
                className="ms-Button ms-Button--default root-5"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-6"
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    aria-hidden="true"
                    className="ui-icon al am an"
                    role="img"
                  >
                    <svg
                      className="ao au av ar as"
                      focusable="false"
                      role="presentation"
                      viewBox="2 2 16 16"
                    >
                      <g
                        className="ui-icon__outline at"
                      >
                        <path
                          d="M10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                        />
                        <path
                          d="M2 6C2 4.89543 2.89543 4 4 4H16C17.1046 4 18 4.89543 18 6V14C18 15.1046 17.1046 16 16 16H4C2.89543 16 2 15.1046 2 14V6ZM4 5C3.44772 5 3 5.44772 3 6V14C3 14.5523 3.44772 15 4 15H16C16.5523 15 17 14.5523 17 14V6C17 5.44772 16.5523 5 16 5H4Z"
                        />
                      </g>
                      <path
                        className="ui-icon__filled"
                        d="M4 4C2.89543 4 2 4.89543 2 6V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V6C18 4.89543 17.1046 4 16 4H4ZM10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <button
                className="ms-Button ms-Button--default root-13"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-6"
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    aria-hidden="true"
                    className="ui-icon al am an"
                    role="img"
                  >
                    <svg
                      className="ao au av ar as"
                      focusable="false"
                      role="presentation"
                      viewBox="2 2 16 16"
                    >
                      <path
                        className="ui-icon__outline at"
                        d="M10 6.00001C13.3317 5.99572 15.5858 7.2756 17.154 8.65976C17.8139 9.2422 18.116 10.1179 17.9594 10.94L17.8015 11.7692C17.6535 12.5461 16.9272 13.0679 16.1042 12.9884L14.4666 12.8302C13.753 12.7613 13.2241 12.2401 13 11.5001C12.6957 10.4953 12.5 9.75009 12.5 9.75009C11.7522 9.44357 11.0138 9.25005 10 9.25005C8.98623 9.25005 8.26225 9.46492 7.5 9.75009C7.5 9.75009 7.29566 10.496 7 11.5001C6.80244 12.171 6.49595 12.7567 5.79708 12.8269L4.16895 12.9905C3.35656 13.0722 2.57765 12.5555 2.3467 11.7818L2.09921 10.9526C1.85286 10.1273 2.0727 9.25869 2.67633 8.67245C4.10141 7.28843 6.67315 6.00433 10 6.00001ZM13.4754 9.52689L13.5008 9.62157C13.5232 9.70474 13.5565 9.82664 13.5991 9.97972C13.6846 10.2861 13.8075 10.7163 13.9571 11.2102C14.0936 11.661 14.3462 11.8139 14.5628 11.8348L16.2004 11.993C16.5457 12.0264 16.7746 11.816 16.8191 11.5821L16.9771 10.7529C17.0653 10.2894 16.8963 9.76613 16.4923 9.40948C15.0673 8.1517 13.0404 6.9961 10.0013 7.00001C6.92594 7.00401 4.60599 8.19238 3.37303 9.38982C3.04458 9.70881 2.9145 10.1877 3.05744 10.6666L3.30493 11.4957C3.39647 11.8024 3.72575 12.03 4.06896 11.9955L5.69709 11.8319C5.73551 11.8281 5.74859 11.8203 5.7511 11.8189C5.75521 11.8165 5.77275 11.8057 5.80155 11.7692C5.8711 11.6811 5.9536 11.5135 6.04073 11.2176C6.18728 10.7199 6.31122 10.2861 6.39847 9.97694C6.44208 9.82241 6.47648 9.69914 6.49992 9.61474L6.52663 9.51827C6.62916 9.15132 6.98467 8.89552 7.14961 8.81349C7.96877 8.50703 8.81921 8.25005 10 8.25005C11.1653 8.25005 12.0327 8.47779 12.8793 8.8248C13.0313 8.88736 13.3617 9.10921 13.4672 9.4961L13.4691 9.50315L13.4754 9.52689Z"
                      />
                      <path
                        className="ui-icon__filled"
                        d="M17.9594 10.94L17.8015 11.7691C17.6535 12.546 16.9272 13.0678 16.1042 12.9883L14.4666 12.8301C13.753 12.7612 13.2241 12.24 13 11.5C12.6957 10.4952 12.5 9.75 12.5 9.75C11.7522 9.44348 11.0138 9.24996 10 9.24996C8.98623 9.24996 8.26225 9.46483 7.5 9.75C7.5 9.75 7.29566 10.4959 7 11.5C6.80244 12.1709 6.49595 12.7566 5.79708 12.8268L4.16895 12.9904C3.35656 13.0721 2.57765 12.5554 2.3467 11.7817L2.09921 10.9525C1.85286 10.1272 2.0727 9.2586 2.67633 8.67236C4.10141 7.28834 6.6656 6.50821 9.99245 6.50389C13.3241 6.4996 15.5858 7.27551 17.154 8.65967C17.8139 9.24211 18.116 10.1178 17.9594 10.94Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              style={
                Object {
                  "height": "530px",
                  "width": "830px",
                }
              }
            >
              <div
                className="css-55"
                style={
                  Object {
                    "gridTemplateColumns": "repeat(1, 1fr)",
                    "gridTemplateRows": "repeat(1, minmax(0, 1fr))",
                  }
                }
              >
                <div
                  className="ms-Stack css-18"
                >
                  <div
                    className="ms-Stack css-19"
                  >
                    <div
                      className="ms-Stack css-21"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-22"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-29"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-31"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-34"
                            >
                              <span>
                                M
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-37"
                  >
                    <label>
                      Michael
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots UI Components/GridLayout Grid Layout Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        style={
          Object {
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="css-55"
          style={
            Object {
              "gridTemplateColumns": "repeat(2, 1fr)",
              "gridTemplateRows": "repeat(2, minmax(0, 1fr))",
            }
          }
        >
          <div
            className="ms-Stack css-5"
          >
            <div
              className="ms-Stack css-6"
            >
              <div
                className="ms-Stack css-8"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-9"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-16"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-18"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-21"
                      >
                        <span>
                          M
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-24"
            >
              <label>
                Michael
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-5"
          >
            <div
              className="ms-Stack css-6"
            >
              <div
                className="ms-Stack css-8"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-9"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-16"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-18"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-25"
                      >
                        <span>
                          J
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-24"
            >
              <label>
                Jim
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-5"
          >
            <div
              className="ms-Stack css-6"
            >
              <div
                className="ms-Stack css-8"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-9"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-16"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-18"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-26"
                      >
                        <span>
                          P
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-24"
            >
              <label>
                Pam
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-5"
          >
            <div
              className="ms-Stack css-6"
            >
              <div
                className="ms-Stack css-8"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-9"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-16"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-18"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-27"
                      >
                        <span>
                          D
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-24"
            >
              <label>
                Dwight
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots UI Components/ReadReceipt Read Reciept Icon Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-TooltipHost root-2"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          aria-hidden={true}
          className="root_de478240 css-61"
          role="presentation"
          style={Object {}}
        >
          <svg
            className="svg_de478240"
            viewBox="0 0 2048 2048"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1491 595l90 90-749 749-365-365 90-90 275 275 659-659zM1024 0q141 0 272 36t245 103 207 160 160 208 103 245 37 272q0 141-36 272t-103 245-160 207-208 160-245 103-272 37q-141 0-272-36t-245-103-207-160-160-208-103-244-37-273q0-141 36-272t103-245 160-207 208-160T751 37t273-37zm0 1920q123 0 237-32t214-90 182-141 140-181 91-214 32-238q0-123-32-237t-90-214-141-182-181-140-214-91-238-32q-123 0-237 32t-214 90-182 141-140 181-91 214-32 238q0 123 32 237t90 214 141 182 181 140 214 91 238 32z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots UI Components/TypingIndicator Typing Indicator Component 1`] = `
<div
  className="css-74 root-0 body-1"
>
  <div
    className="css-74"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="css-52"
      >
        <span
          className="css-53"
        >
          User1, 
        </span>
        <span
          className="css-53"
        >
          User2
        </span>
        <span
          className="css-53"
        >
           and 5 others are typing...
        </span>
      </div>
    </div>
  </div>
</div>
`;
